k8s/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dapo-reference-cd-pipeline
    app.kubernetes.io/component: dapo-reference-cd-pipeline
    app.kubernetes.io/instance: dapo-reference-cd-pipeline
  name: dapo-reference-cd-pipeline
  namespace: ccop-ref-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: dapo-reference-cd-pipeline
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: dapo-reference-cd-pipeline
    spec:
      containers:
      - image: <PATCH_ME>
        imagePullPolicy: IfNotPresent
        name: dapo-reference-cd-pipeline
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
