k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: dapo-reference-cd-pipeline
    app.kubernetes.io/component: dapo-reference-cd-pipeline
    app.kubernetes.io/instance: dapo-reference-cd-pipeline
  name: dapo-reference-cd-pipeline
  namespace: ccop-ref-dev
spec:
  port:
    targetPort: 9090
  to:
    kind: Service
    name: dapo-reference-cd-pipeline
    weight: 100
  wildcardPolicy: None
